--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,6 +41,12 @@ http {
         server_name  _;
         root         /usr/share/nginx/html;
 
+       listen       443 ssl http default_server;
+       listen       [::]:443 ssl http default_server;
+
+       ssl_certificate /etc/nginx/ssl/nginx.crt;
+       ssl_certificate_key /etc/nginx/ssl/nginx.key;
+
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
