--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,12 +41,6 @@ http {
         server_name  _;
         root         /usr/share/nginx/html;
 
-       listen       443 ssl http default_server;
-       listen       [::]:443 ssl http default_server;
-
-       ssl_certificate /etc/nginx/ssl/nginx.crt;
-       ssl_certificate_key /etc/nginx/ssl/nginx.key;
-
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
@@ -61,6 +55,34 @@ http {
             location = /50x.html {
         }
     }
+
+    server {
+       listen       443 ssl http default_server;
+       listen       [::]:443 ssl http default_server;
+       server_name  _;
+       root         /usr/share/nginx/html;
+
+       ssl_certificate /etc/nginx/ssl/nginx.crt;
+       ssl_certificate_key /etc/nginx/ssl/nginx.key;
+       ssl_session_cache shared:SSL:1m;
+       ssl_session_timeout  10m;
+       ssl_ciphers HIGH:!aNULL:!MD5;
+       ssl_prefer_server_ciphers on;
+
+       # Load configuration files for the default server block.
+       include /etc/nginx/default.d/*.conf;
+
+       location / {
+       }
+
+       error_page 404 /404.html;
+           location = /40x.html {
+       }
+
+       error_page 500 502 503 504 /50x.html;
+           location = /50x.html {
+       }
+   }
 
 # Settings for a TLS enabled server.
 #
