--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -57,8 +57,8 @@ http {
     # }
 
     server {
-       listen       443 ssl http default_server;
-       listen       [::]:443 ssl http default_server;
+       listen       443 ssl http2 default_server;
+       listen       [::]:443 ssl http2 default_server;
        server_name  _;
        root         /usr/share/nginx/html;
 
