--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -73,6 +73,9 @@ http {
        include /etc/nginx/default.d/*.conf;
 
        location / {
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass  http://172.31.29.171:3000;
        }
 
        error_page 404 /404.html;
