add react test route

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -78,6 +78,12 @@ http {
             proxy_pass  http://172.31.29.171:3000;
        }
 
+        location /react-test {
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass  https://d1sp9goyb81asf.cloudfront.net/;
+        }
+
        error_page 404 /404.html;
            location = /40x.html {
        }
