--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -72,16 +72,16 @@ http {
        # Load configuration files for the default server block.
        include /etc/nginx/default.d/*.conf;
 
-       location / {
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_pass  http://172.31.29.171:3000;
-       }
+    #    location / {
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_pass  http://172.31.29.171:3000;
+    #    }
 
-        location /react-test {
+        location / {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_pass  https://d1sp9goyb81asf.cloudfront.net/;
+            proxy_pass  https://d1sp9goyb81asf.cloudfront.net;
         }
 
        error_page 404 /404.html;
